--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,6 +188,67 @@ h1, h2, h3, h4, h5,
   opacity: 0;
   visibility: hidden; }
 
+#resources{
+  background-color: #f9f9f9;
+}
+
+#resources .row{
+
+}
+
+.res-card{
+  margin:15vh 10%;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  text-align: left !important;
+  color:#2292AD;
+}
+
+.res-card .card-cont{
+  margin:0vh 1%;
+}
+
+.res-card .sharenow{
+  font-family: Nunito;
+  margin:2vh 0vw;
+  font-weight: 600;
+  font-size: 0.65rem;
+  line-height: 1rem;
+  text-align: center;
+  color: #2292AD;
+
+}
+
+.res-card .text-fix{
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  margin:2vh 0vw;
+}
+
+.res-card button{
+  background: #F4D0B5;
+  margin-bottom: 5vh;
+}
+
+.res-card button a{
+  color: #2292AD !important;
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 450;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  text-align: center;
+}
+
+.res-card .sm-buttons .items{
+  margin-left:1vw;
+  margin-right:1vw;
+}
+
 .offcanvas-menu .site-wrap {
   height: 100%;
   width: 100%;
@@ -225,15 +286,17 @@ h1, h2, h3, h4, h5,
 }
 
 /* The Close Button */
-.close {
+#close {
+  text-align: right;
+  padding-right: 2vh;
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+#close:hover,
+#close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
